src/test/contracts/negative/linearity.ligo
type foofoo is record [ foo : string; foo : int ]